--- a/le_gourmand.html
+++ b/le_gourmand.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Full gourmand</title>
+    <title>The Full</title>
 
     <!-- Style sheets -->
     <link rel="stylesheet" href="css/main.css" type="text/css">
@@ -26,7 +26,7 @@
     <header>
         <!-- Navigation -->
         <nav>
-            <div class="rstnt-navigation-gourmand">
+            <div class="rstnt-navigation">
                 <a href="ohmyfood.html">
                     <i class="fas fa-arrow-left"></i>
                 </a>
@@ -38,24 +38,24 @@
     </header>
     <!-- MAIN SECTION -->
     <main>
-        <!--Le Gourmand Menue section  -->
-        <article class="menu-gourmand">
-            <article class="menu-title-gourmand">
+        <!--Le Menue section  -->
+        <article class="menu">
+            <article class="menu-title">
                 <h1>Le Gourmand</h1>
                 <i class="far heart fa-heart"></i>
             </article>
             <!-- Starters -->
 
             <h2>ENTREES</h2>
-            <div class="line-gourmand"></div>
+            <div class="line"></div>
             <div class="visible-dish-wrap">
-                <div class="dish-wrap-gourmand">
-                    <div class="dish-gourmand">
-                        <article class="dish-info-gourmand">
+                <div class="dish-wrap">
+                    <div class="dish">
+                        <article class="dish-info">
                             <h3>Tuna Carpaccio</h3>
                             <p>Seasoned with yuzu</p>
                         </article>
-                        <span class="dish-gourmand-price">25€</span>
+                        <span class="dish-price">25€</span>
                     </div>
                     <div class="check">
                         <i class="fas fa-check-circle"></i>
@@ -63,13 +63,13 @@
                 </div>
             </div>
             <div class="visible-dish-wrap">
-                <div class="dish-wrap-gourmand">
-                    <div class="dish-gourmand">
-                        <article class="dish-info-gourmand">
+                <div class="dish-wrap">
+                    <div class="dish">
+                        <article class="dish-info">
                             <h3>Crunchy Lobster Croquets</h3>
                             <p>With seasonal vegetables</p>
                         </article>
-                        <span class="dish-gourmand-price">35€</span>
+                        <span class="dish-price">35€</span>
                     </div>
                     <div class="check">
                         <i class="fas fa-check-circle"></i>
@@ -77,13 +77,13 @@
                 </div>
             </div>
             <div class="visible-dish-wrap">
-                <div class="dish-wrap-gourmand">
-                    <div class="dish-gourmand">
-                        <article class="dish-info-gourmand">
+                <div class="dish-wrap">
+                    <div class="dish">
+                        <article class="dish-info">
                             <h3>Mushroom Soup</h3>
                             <p>With truffles</p>
                         </article>
-                        <span class="dish-gourmand-price">20€</span>
+                        <span class="dish-price">20€</span>
                     </div>
                     <div class="check">
                         <i class="fas fa-check-circle"></i>
@@ -92,15 +92,15 @@
             </div>
             <!-- Main dish -->
             <h2>MAIN DISH</h2>
-            <div class="line-gourmand"></div>
+            <div class="line"></div>
             <div class="visible-dish-wrap">
-                <div class="dish-wrap-gourmand">
-                    <div class="dish-gourmand">
-                        <article class="dish-info-gourmand">
+                <div class="dish-wrap">
+                    <div class="dish">
+                        <article class="dish-info">
                             <h3>Roast Chicken with Provincal Herbs</h3>
                             <p>With truffle cream</p>
                         </article>
-                        <span class="dish-gourmand-price">40€</span>
+                        <span class="dish-price">40€</span>
                     </div>
                     <div class="check">
                         <i class="fas fa-check-circle"></i>
@@ -108,13 +108,13 @@
                 </div>
             </div>
             <div class="visible-dish-wrap">
-                <div class="dish-wrap-gourmand">
-                    <div class="dish-gourmand">
-                        <article class="dish-info-gourmand">
+                <div class="dish-wrap">
+                    <div class="dish">
+                        <article class="dish-info">
                             <h3>Roasted Lobster</h3>
                             <p>With seasonel vegetables</p>
                         </article>
-                        <span class="dish-gourmand-price">35€</span>
+                        <span class="dish-price">35€</span>
                     </div>
                     <div class="check">
                         <i class="fas fa-check-circle"></i>
@@ -122,13 +122,13 @@
                 </div>
             </div>
             <div class="visible-dish-wrap">
-                <div class="dish-wrap-gourmand">
-                    <div class="dish-gourmand">
-                        <article class="dish-info-gourmand">
+                <div class="dish-wrap">
+                    <div class="dish">
+                        <article class="dish-info">
                             <h3>Angust Beef Ribs</h3>
                             <p>With mashed parshnips</p>
                         </article>
-                        <span class="dish-gourmand-price">44€</span>
+                        <span class="dish-price">44€</span>
                     </div>
                     <div class="check">
                         <i class="fas fa-check-circle"></i>
@@ -137,15 +137,15 @@
             </div>
             <!-- Desserts -->
             <h2>DESSERTS</h2>
-            <div class="line-gourmand"></div>
+            <div class="line"></div>
             <div class="visible-dish-wrap">
-                <div class="dish-wrap-gourmand">
-                    <div class="dish-gourmand">
-                        <article class="dish-info-gourmand">
+                <div class="dish-wrap">
+                    <div class="dish">
+                        <article class="dish-info">
                             <h3>Assorted Dessert P|late</h3>
                             <p>Chef's choice</p>
                         </article>
-                        <span class="dish-gourmand-price">18€</span>
+                        <span class="dish-price">18€</span>
                     </div>
                     <div class="check">
                         <i class="fas fa-check-circle"></i>
@@ -153,13 +153,13 @@
                 </div>
             </div>
             <div class="visible-dish-wrap">
-                <div class="dish-wrap-gourmand">
-                    <div class="dish-gourmand">
-                        <article class="dish-info-gourmand">
+                <div class="dish-wrap">
+                    <div class="dish">
+                        <article class="dish-info">
                             <h3>Crème brulée</h3>
                             <p>Revisited</p>
                         </article>
-                        <span class="dish-gourmand-price">22€</span>
+                        <span class="dish-price">22€</span>
                     </div>
                     <div class="check">
                         <i class="fas fa-check-circle"></i>
@@ -167,13 +167,13 @@
                 </div>
             </div>
             <div class="visible-dish-wrap">
-                <div class="dish-wrap-gourmand">
-                    <div class="dish-gourmand">
-                        <article class="dish-info-gourmand">
+                <div class="dish-wrap">
+                    <div class="dish">
+                        <article class="dish-info">
                             <h3>Tiramisu</h3>
                             <p>With hazelnuts</p>
                         </article>
-                        <span class="dish-gourmand-price">23€</span>
+                        <span class="dish-price">23€</span>
                     </div>
                     <div class="check">
                         <i class="fas fa-check-circle"></i>
