--- a/the_enchanted_plate.html
+++ b/the_enchanted_plate.html
@@ -27,7 +27,7 @@
     <header>
         <!-- Navigation -->
         <nav>
-            <div class="rstnt-navigation-plate">
+            <div class="rstnt-navigation">
                 <a href="ohmyfood.html">
                     <i class="fas fa-arrow-left"></i>
                 </a>
@@ -39,22 +39,22 @@
     <!-- MAIN SECTION -->
     <main>
         <!--The Full plat Menue section  -->
-        <article class="menu-plate">
-            <article class="menu-title-plate">
-                <h1>The Enchanted Plate</h1>
+        <article class="menu">
+            <article class="menu-title">
+                <h1>The Enchanted plate</h1>
                 <i class="far heart fa-heart"></i>
             </article>
             <!-- Starters -->
             <h2>ENTREES</h2>
-            <div class="line-plate"></div>
+            <div class="line"></div>
             <div class="visible-dish-wrap">
-                <div class="dish-wrap-plate">
-                    <div class="dish-plate">
-                        <article class="dish-info-plate">
+                <div class="dish-wrap">
+                    <div class="dish">
+                        <article class="dish-info">
                             <h3>Foie Gras Ravioli</h3>
                             <p>With truffle cream</p>
                         </article>
-                        <span class="dish-plate-price">25€</span>
+                        <span class="dish-price">25€</span>
                     </div>
                     <div class="check">
                         <i class="fas fa-check-circle"></i>
@@ -62,13 +62,13 @@
                 </div>
             </div>
             <div class="visible-dish-wrap">
-                <div class="dish-wrap-plate">
-                    <div class="dish-plate">
-                        <article class="dish-info-plate">
+                <div class="dish-wrap">
+                    <div class="dish">
+                        <article class="dish-info">
                             <h3>Oscietra Caviar</h3>
                             <p>With buckwheat blinis</p>
                         </article>
-                        <span class="dish-plate-price">35€</span>
+                        <span class="dish-price">35€</span>
                     </div>
                     <div class="check">
                         <i class="fas fa-check-circle"></i>
@@ -76,13 +76,13 @@
                 </div>
             </div>
             <div class="visible-dish-wrap">
-                <div class="dish-wrap-plate">
-                    <div class="dish-plate">
-                        <article class="dish-info-plate">
+                <div class="dish-wrap">
+                    <div class="dish">
+                        <article class="dish-info">
                             <h3>Lobster and Leek Foam</h3>
                             <p>Marinated with orange zest</p>
                         </article>
-                        <span class="dish-plate-price">20€</span>
+                        <span class="dish-price">20€</span>
                     </div>
                     <div class="check">
                         <i class="fas fa-check-circle"></i>
@@ -90,13 +90,13 @@
                 </div>
             </div>
             <div class="visible-dish-wrap">
-                <div class="dish-wrap-plate">
-                    <div class="dish-plate">
-                        <article class="dish-info-plate">
+                <div class="dish-wrap">
+                    <div class="dish">
+                        <article class="dish-info">
                             <h3>Duck Foie Gras</h3>
                             <p>With fig jam and grilled baguette</p>
                         </article>
-                        <span class="dish-plate-price">35€</span>
+                        <span class="dish-price">35€</span>
                     </div>
                     <div class="check">
                         <i class="fas fa-check-circle"></i>
@@ -105,15 +105,15 @@
             </div>
             <!-- Main dish -->
             <h2>MAIN DISH</h2>
-            <div class="line-plate"></div>
+            <div class="line"></div>
             <div class="visible-dish-wrap">
-                <div class="dish-wrap-plate">
-                    <div class="dish-plate">
-                        <article class="dish-info-plate">
+                <div class="dish-wrap">
+                    <div class="dish">
+                        <article class="dish-info">
                             <h3>Fresh Buttered Scallops</h3>
                             <p>With white celery puree</p>
                         </article>
-                        <span class="dish-plate-price">40€</span>
+                        <span class="dish-price">40€</span>
                     </div>
                     <div class="check">
                         <i class="fas fa-check-circle"></i>
@@ -121,13 +121,13 @@
                 </div>
             </div>
             <div class="visible-dish-wrap">
-                <div class="dish-wrap-plate">
-                    <div class="dish-plate">
-                        <article class="dish-info-plate">
+                <div class="dish-wrap">
+                    <div class="dish">
+                        <article class="dish-info">
                             <h3>Pan-Fried Lobster</h3>
                             <p>With mashed sweet potatoes</p>
                         </article>
-                        <span class="dish-plate-price">35€</span>
+                        <span class="dish-price">35€</span>
                     </div>
                     <div class="check">
                         <i class="fas fa-check-circle"></i>
@@ -135,64 +135,64 @@
                 </div>
             </div>
             <div class="visible-dish-wrap">
-                <div class="dish-wrap-plate">
-                    <div class="dish-plate">
-                        <article class="dish-info-plate">
+                <div class="dish-wrap">
+                    <div class="dish">
+                        <article class="dish-info">
                             <h3>Braised Ox Tail</h3>
                             <p>With wild rice and lemon zest</p>
                         </article>
-                        <span class="dish-plate-price">44€</span>
-                    </div>
-                    <div class="check">
-                        <i class="fas fa-check-circle"></i>
-                    </div>
-            </div>
-            <!-- Desserts -->
-            <h2>DESSERTS</h2>
-            <div class="line-plate"></div>
-            <div class="visible-dish-wrap">
-                <div class="dish-wrap-plate">
-                    <div class="dish-plate">
-                        <article class="dish-info-plate">
-                            <h3>Chocolate and Hazelnut Macaron</h3>
-                            <p>With caramel butter ice cream</p>
-                        </article>
-                        <span class="dish-plate-price">18€</span>
+                        <span class="dish-price">44€</span>
                     </div>
                     <div class="check">
                         <i class="fas fa-check-circle"></i>
                     </div>
                 </div>
-            </div>
-            <div class="visible-dish-wrap">
-                <div class="dish-wrap-plate">
-                    <div class="dish-plate">
-                        <article class="dish-info-plate">
-                            <h3>Baba au rhum</h3>
-                            <p>With lemon drizzle</p>
-                        </article>
-                        <span class="dish-plate-price">22€</span>
-                    </div>
-                    <div class="check">
-                        <i class="fas fa-check-circle"></i>
-                    </div>
-                </div>
-            </div>
-            <div class="visible-dish-wrap">
-                <div class="dish-wrap-plate">
-                    <div class="dish-plate">
-                        <article class="dish-info-plate">
-                            <h3>Lemon Meringue Pie</h3>
-                            <p>Destructured</p>
-                        </article>
-                        <span class="dish-plate-price">23€</span>
-                    </div>
-                    <div class="check">
-                        <i class="fas fa-check-circle"></i>
+                <!-- Desserts -->
+                <h2>DESSERTS</h2>
+                <div class="line"></div>
+                <div class="visible-dish-wrap">
+                    <div class="dish-wrap">
+                        <div class="dish">
+                            <article class="dish-info">
+                                <h3>Chocolate and Hazelnut Macaron</h3>
+                                <p>With caramel butter ice cream</p>
+                            </article>
+                            <span class="dish-price">18€</span>
+                        </div>
+                        <div class="check">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <button class="order">Order</button>
+                <div class="visible-dish-wrap">
+                    <div class="dish-wrap">
+                        <div class="dish">
+                            <article class="dish-info">
+                                <h3>Baba au rhum</h3>
+                                <p>With lemon drizzle</p>
+                            </article>
+                            <span class="dish-price">22€</span>
+                        </div>
+                        <div class="check">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="visible-dish-wrap">
+                    <div class="dish-wrap">
+                        <div class="dish">
+                            <article class="dish-info">
+                                <h3>Lemon Meringue Pie</h3>
+                                <p>Destructured</p>
+                            </article>
+                            <span class="dish-price">23€</span>
+                        </div>
+                        <div class="check">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
+                    </div>
+                </div>
+                <button class="order">Order</button>
         </article>
     </main>
     <!-- FOOTER -->
