--- a/the_full_palette.html
+++ b/the_full_palette.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Full Palette</title>
+    <title>The Full</title>
 
     <!-- Style sheets -->
     <link rel="stylesheet" href="css/main.css" type="text/css">
@@ -26,7 +26,7 @@
     <header>
         <!-- Navigation -->
         <nav>
-            <div class="rstnt-navigation-palette">
+            <div class="rstnt-navigation">
                 <a href="ohmyfood.html">
                     <i class="fas fa-arrow-left"></i>
                 </a>
@@ -38,26 +38,26 @@
     </header>
     <!-- MAIN SECTION -->
     <main>
-        <!--The Full Palette Menue section  -->
-        <article class="menu-palette">
-            <article class="menu-title-palette">
+        <!--The Full Menue section  -->
+        <article class="menu">
+            <article class="menu-title">
                 <h1>The Full Palette</h1>
                 <i class="far heart fa-heart "></i>
             </article>
             <!-- Starters -->
             <h2>ENTREES</h2>
-            <div class="menu-section palette">
+            <div class="menu-section">
                 <div class="line"></div>
                 <div class="visible-dish-wrap">
-                    <div class="dish-wrap-palette">
-                        <div class="dish-palette">
-                            <article class="dish-info-palette">
+                    <div class="dish-wrap">
+                        <div class="dish">
+                            <article class="dish-info">
                                 <h3>Escargot</h3>
                                 <div class="dish-describe">
                                     <p>With southern French spices</p>
                                 </div>
                             </article>
-                            <span class="dish-palette-price">25€</span>
+                            <span class="dish-price">25€</span>
                         </div>
                         <div class="check">
                             <i class="fas fa-check-circle"></i>
@@ -65,13 +65,13 @@
                     </div>
                 </div>
                 <div class="visible-dish-wrap">
-                    <div class="dish-wrap-palette">
-                        <div class="dish-palette">
-                            <article class="dish-info-palette">
+                    <div class="dish-wrap">
+                        <div class="dish">
+                            <article class="dish-info">
                                 <h3>Duck Foie Gras</h3>
                                 <p>With black truffle shavings</p>
                             </article>
-                            <span class="dish-palette-price">35€</span>
+                            <span class="dish-price">35€</span>
                         </div>
                         <div class="check">
                             <i class="fas fa-check-circle"></i>
@@ -79,13 +79,13 @@
                     </div>
                 </div>
                 <div class="visible-dish-wrap">
-                    <div class="dish-wrap-palette">
-                        <div class="dish-palette">
-                            <article class="dish-info-palette">
+                    <div class="dish-wrap">
+                        <div class="dish">
+                            <article class="dish-info">
                                 <h3>Fried egg</h3>
                                 <p>Seasoned with truffle cream and ... </p>
                             </article>
-                            <span class="dish-palette-price">20€</span>
+                            <span class="dish-price">20€</span>
                         </div>
                         <div class="check">
                             <i class="fas fa-check-circle"></i>
@@ -95,16 +95,16 @@
             </div>
             <!-- Main dish -->
             <h2>MAIN DISH</h2>
-            <div class="menu-section palette">
+            <div class="menu-section">
                 <div class="line"></div>
                 <div class="visible-dish-wrap">
-                    <div class="dish-wrap-palette">
-                        <div class="dish-palette">
-                            <article class="dish-info-palette">
+                    <div class="dish-wrap">
+                        <div class="dish">
+                            <article class="dish-info">
                                 <h3>Herb-Encrusted Steak</h3>
                                 <p>With delicately sliced and seasoned veg...</p>
                             </article>
-                            <span class="dish-palette-price">40€</span>
+                            <span class="dish-price">40€</span>
                         </div>
                         <div class="check">
                             <i class="fas fa-check-circle"></i>
@@ -112,13 +112,13 @@
                     </div>
                 </div>
                 <div class="visible-dish-wrap">
-                    <div class="dish-wrap-palette">
-                        <div class="dish-palette">
-                            <article class="dish-info-palette">
+                    <div class="dish-wrap">
+                        <div class="dish">
+                            <article class="dish-info">
                                 <h3>Ox Tail Shepard's Pie</h3>
                                 <p>With black truffle and pureed parsnips</p>
                             </article>
-                            <span class="dish-palette-price">35€</span>
+                            <span class="dish-price">35€</span>
                         </div>
                         <div class="check">
                             <i class="fas fa-check-circle"></i>
@@ -126,13 +126,13 @@
                     </div>
                 </div>
                 <div class="visible-dish-wrap">
-                    <div class="dish-wrap-palette">
-                        <div class="dish-palette">
-                            <article class="dish-info-palette">
+                    <div class="dish-wrap">
+                        <div class="dish">
+                            <article class="dish-info">
                                 <h3>Filet of Sole</h3>
                                 <p>With citrus dressing</p>
                             </article>
-                            <span class="dish-palette-price">44€</span>
+                            <span class="dish-price">44€</span>
                         </div>
                         <div class="check">
                             <i class="fas fa-check-circle"></i>
@@ -142,16 +142,16 @@
             </div>
             <!-- Desserts -->
             <h2>DESSERTS</h2>
-            <div class="menu-section palette">
+            <div class="menu-section">
                 <div class="line"></div>
                 <div class="visible-dish-wrap">
-                    <div class="dish-wrap-palette">
-                        <div class="dish-palette">
-                            <article class="dish-info-palette">
+                    <div class="dish-wrap">
+                        <div class="dish">
+                            <article class="dish-info">
                                 <h3>Paris-Brest</h3>
                                 <p>Revisited</p>
                             </article>
-                            <span class="dish-palette-price">18€</span>
+                            <span class="dish-price">18€</span>
                         </div>
                         <div class="check">
                             <i class="fas fa-check-circle"></i>
@@ -159,13 +159,13 @@
                     </div>
                 </div>
                 <div class="visible-dish-wrap">
-                    <div class="dish-wrap-palette">
-                        <div class="dish-palette">
-                            <article class="dish-info-palette">
+                    <div class="dish-wrap">
+                        <div class="dish">
+                            <article class="dish-info">
                                 <h3>Chocolate Macaroons</h3>
                                 <p>With vanilla ice cream</p>
                             </article>
-                            <span class="dish-palette-price">22€</span>
+                            <span class="dish-price">22€</span>
                         </div>
                         <div class="check">
                             <i class="fas fa-check-circle"></i>
@@ -174,20 +174,20 @@
                 </div>
 
                 <div class="visible-dish-wrap">
-                    <div class="dish-wrap-palette">
-                        <div class="dish-palette">
-                            <article class="dish-info-palette">
+                    <div class="dish-wrap">
+                        <div class="dish">
+                            <article class="dish-info">
                                 <h3>Chocolate Mousse</h3>
                                 <p>With cpices and black truffle</p>
                             </article>
-                            <span class="dish-palette-price">23€</span>
+                            <span class="dish-price">23€</span>
                         </div>
                         <div class="check">
                             <i class="fas fa-check-circle"></i>
                         </div>
                     </div>
                 </div>
-            </div> 
+            </div>
             <button class="order">Order</button>
         </article>
     </main>
