--- a/bastille.html
+++ b/bastille.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Full bastille</title>
+    <title>The Full</title>
 
     <!-- Style sheets -->
     <link rel="stylesheet" href="css/main.css" type="text/css">
@@ -26,7 +26,7 @@
     <header>
         <!-- Navigation -->
         <nav>
-            <div class="rstnt-navigation-bastille">
+            <div class="rstnt-navigation">
                 <a href="ohmyfood.html">
                     <i class="fas fa-arrow-left"></i>
                 </a>
@@ -38,23 +38,23 @@
     </header>
     <!-- MAIN SECTION -->
     <main>
-        <!--Bastille Menue section  -->
-        <article class="menu-bastille">
-            <article class="menu-title-bastille">
+        <!- Menue section  -->
+        <article class="menu">
+            <article class="menu-title">
                 <h1>Bastille</h1>
                 <i class="far heart fa-heart"></i>
             </article>
             <!-- Starters -->
             <h2>ENTREES</h2>
-            <div class="line-bastille"></div>
+            <div class="line"></div>
             <div class="visible-dish-wrap">
-                <div class="dish-wrap-bastille">
-                    <div class="dish-bastille">
-                        <article class="dish-info-bastille">
+                <div class="dish-wrap">
+                    <div class="dish">
+                        <article class="dish-info">
                             <h3>Citrus Squid Carpaccio</h3>
                             <p>With orange zest</p>
                         </article>
-                        <span class="dish-bastille-price">25€</span>
+                        <span class="dish-price">25€</span>
                     </div>
                     <div class="check">
                         <i class="fas fa-check-circle"></i>
@@ -62,13 +62,13 @@
                 </div>
             </div>
             <div class="visible-dish-wrap">
-                <div class="dish-wrap-bastille">
-                    <div class="dish-bastille">
-                        <article class="dish-info-bastille">
+                <div class="dish-wrap">
+                    <div class="dish">
+                        <article class="dish-info">
                             <h3>Grandmoters's Vegetable Soup</h3>
                             <p>Carrots,parsnips,Jerusalem artichoke</p>
                         </article>
-                        <span class="dish-bastille-price">35€</span>
+                        <span class="dish-price">35€</span>
                     </div>
                     <div class="check">
                         <i class="fas fa-check-circle"></i>
@@ -76,13 +76,13 @@
                 </div>
             </div>
             <div class="visible-dish-wrap">
-                <div class="dish-wrap-bastille">
-                    <div class="dish-bastille">
-                        <article class="dish-info-bastille">
+                <div class="dish-wrap">
+                    <div class="dish">
+                        <article class="dish-info">
                             <h3>Onion Soup</h3>
                             <p>Revisited</p>
                         </article>
-                        <span class="dish-bastille-price">20€</span>
+                        <span class="dish-price">20€</span>
                     </div>
                     <div class="check">
                         <i class="fas fa-check-circle"></i>
@@ -91,15 +91,15 @@
             </div>
             <!-- Main dish -->
             <h2>MAIN DISH</h2>
-            <div class="line-bastille"></div>
+            <div class="line"></div>
             <div class="visible-dish-wrap">
-                <div class="dish-wrap-bastille">
-                    <div class="dish-bastille">
-                        <article class="dish-info-bastille">
+                <div class="dish-wrap">
+                    <div class="dish">
+                        <article class="dish-info">
                             <h3>Scallops</h3>
                             <p>With mashed parsnip</p>
                         </article>
-                        <span class="dish-bastille-price">40€</span>
+                        <span class="dish-price">40€</span>
                     </div>
                     <div class="check">
                         <i class="fas fa-check-circle"></i>
@@ -107,13 +107,13 @@
                 </div>
             </div>
             <div class="visible-dish-wrap">
-                <div class="dish-wrap-bastille">
-                    <div class="dish-bastille">
-                        <article class="dish-info-bastille">
+                <div class="dish-wrap">
+                    <div class="dish">
+                        <article class="dish-info">
                             <h3>Magret de canard</h3>
                             <p>With mashed potatoes</p>
                         </article>
-                        <span class="dish-bastille-price">35€</span>
+                        <span class="dish-price">35€</span>
                     </div>
                     <div class="check">
                         <i class="fas fa-check-circle"></i>
@@ -121,13 +121,13 @@
                 </div>
             </div>
             <div class="visible-dish-wrap">
-                <div class="dish-wrap-bastille">
-                    <div class="dish-bastille">
-                        <article class="dish-info-bastille">
+                <div class="dish-wrap">
+                    <div class="dish">
+                        <article class="dish-info">
                             <h3>Game Hen</h3>
                             <p>With vegetable gnocchis</p>
                         </article>
-                        <span class="dish-bastille-price">44€</span>
+                        <span class="dish-price">44€</span>
                     </div>
                     <div class="check">
                         <i class="fas fa-check-circle"></i>
@@ -136,15 +136,15 @@
             </div>
             <!-- Desserts -->
             <h2>DESSERTS</h2>
-            <div class="line-bastille"></div>
+            <div class="line"></div>
             <div class="visible-dish-wrap">
-                <div class="dish-wrap-bastille">
-                    <div class="dish-bastille">
-                        <article class="dish-info-bastille">
+                <div class="dish-wrap">
+                    <div class="dish">
+                        <article class="dish-info">
                             <h3>Floral Ice Cream</h3>
                             <p>With hazelnut butter</p>
                         </article>
-                        <span class="dish-bastille-price">18€</span>
+                        <span class="dish-price">18€</span>
                     </div>
                     <div class="check">
                         <i class="fas fa-check-circle"></i>
@@ -152,13 +152,13 @@
                 </div>
             </div>
             <div class="visible-dish-wrap">
-                <div class="dish-wrap-bastille">
-                    <div class="dish-bastille">
-                        <article class="dish-info-bastille">
+                <div class="dish-wrap">
+                    <div class="dish">
+                        <article class="dish-info">
                             <h3>Chocolate Lava Cake</h3>
                             <p>Revisited</p>
                         </article>
-                        <span class="dish-bastille-price">22€</span>
+                        <span class="dish-price">22€</span>
                     </div>
                     <div class="check">
                         <i class="fas fa-check-circle"></i>
@@ -166,13 +166,13 @@
                 </div>
             </div>
             <div class="visible-dish-wrap">
-                <div class="dish-wrap-bastille">
-                    <div class="dish-bastille">
-                        <article class="dish-info-bastille">
+                <div class="dish-wrap">
+                    <div class="dish">
+                        <article class="dish-info">
                             <h3>Napolean</h3>
                             <p>With blueberries and marzipan</p>
                         </article>
-                        <span class="dish-bastille-price">23€</span>
+                        <span class="dish-price">23€</span>
                     </div>
                     <div class="check">
                         <i class="fas fa-check-circle"></i>
