--- a/the_full_palette.html
+++ b/the_full_palette.html
@@ -38,7 +38,7 @@
     </header>
     <!-- MAIN SECTION -->
     <main>
-        <!--The Full Menue section  -->
+        <!--The Full palette Menue section  -->
         <article class="menu">
             <article class="menu-title">
                 <h1>The Full Palette</h1>
@@ -53,9 +53,9 @@
                         <div class="dish">
                             <article class="dish-info">
                                 <h3>Escargot</h3>
-                                <div class="dish-describe">
-                                    <p>With southern French spices</p>
-                                </div>
+                                <!-- <div class="dish-describe"> -->
+                                <p>With southern French spices</p>
+                                <!-- </div> -->
                             </article>
                             <span class="dish-price">25€</span>
                         </div>
@@ -172,7 +172,6 @@
                         </div>
                     </div>
                 </div>
-
                 <div class="visible-dish-wrap">
                     <div class="dish-wrap">
                         <div class="dish">
