--- a/ohmyfood.html
+++ b/ohmyfood.html
@@ -9,7 +9,7 @@
 
     <!-- Style sheets -->
     <link rel="stylesheet" href="css/style.css" type="text/css">
-    <link rel="stylesheet" href="css/smart-phone.css" type="text/css">
+    <!-- <link rel="stylesheet" href="css/smart-phone.css" type="text/css"> -->
 
     <!-- Libs -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
