--- a/the_enchanted_plate.html
+++ b/the_enchanted_plate.html
@@ -9,8 +9,8 @@
     </title>
 
     <!-- Style sheets -->
-    <link rel="stylesheet" href="css/main.css" type="text/css">
-    <link rel="stylesheet" href="css/smart-phone.css" type="text/css">
+    <link rel="stylesheet" href="css/style.css" type="text/css">
+    <!-- <link rel="stylesheet" href="css/smart-phone.css" type="text/css"> -->
 
     <!-- Libs -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
