--- a/le_gourmand.html
+++ b/le_gourmand.html
@@ -8,8 +8,8 @@
     <title>The Full</title>
 
     <!-- Style sheets -->
-    <link rel="stylesheet" href="css/main.css" type="text/css">
-    <link rel="stylesheet" href="css/smart-phone.css" type="text/css">
+    <link rel="stylesheet" href="css/style.css" type="text/css">
+    <!-- <link rel="stylesheet" href="css/smart-phone.css" type="text/css"> -->
 
     <!-- Libs -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
