--- a/the_enchanted_plate.html
+++ b/the_enchanted_plate.html
@@ -205,7 +205,7 @@
                 <p>Suggest a restaurant</p>
             </a>
             <a href="#">
-                <i class="fas fa-handshake"></i>
+                <i class="fas fa-hands-helping"></i>
                 <p>Become a partner</p>
             </a>
             <a href="#">
