--- a/the_full_palette.html
+++ b/the_full_palette.html
@@ -199,7 +199,7 @@
                 <p>Suggest a restaurant</p>
             </a>
             <a href="#">
-                <i class="fas fa-handshake"></i>
+                <i class="fas fa-hands-helping"></i>
                 <p>Become a partner</p>
             </a>
             <a href="#">
