--- a/bastille.html
+++ b/bastille.html
@@ -30,15 +30,14 @@
                 <a href="ohmyfood.html">
                     <i class="fas fa-arrow-left"></i>
                 </a>
-                <img src="/images/logo/ohmyfood.png" alt="logo picture">
+                <img src="/images/logo/ohmyfood.png" alt="logo_picture">
             </div>
-            <img class="nav-img" src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.webp"
-                alt="restaurant picture">
+            <img class="nav-img" src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.webp" alt="restaurant_picture">
         </nav>
     </header>
     <!-- MAIN SECTION -->
     <main>
-        <!- Menue section  -->
+        <!-- Menue section  --> -->
         <article class="menu">
             <article class="menu-title">
                 <h1>Bastille</h1>
@@ -184,7 +183,7 @@
     </main>
     <!-- FOOTER -->
     <footer>
-        <h5>ohmyfood</h5>
+        <h4>ohmyfood</h4>
         <div class="contacts">
             <a href="#">
                 <i class="fas fa-utensils"></i>
