--- a/le_gourmand.html
+++ b/le_gourmand.html
@@ -30,10 +30,9 @@
                 <a href="ohmyfood.html">
                     <i class="fas fa-arrow-left"></i>
                 </a>
-                <img src="/images/logo/ohmyfood.png" alt="logo picture">
+                <img src="/images/logo/ohmyfood.png" alt="logo_picture">
             </div>
-            <img class="nav-img" src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.webp"
-                alt="restaurant picture">
+            <img class="nav-img" src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.webp" alt="restaurant_picture">
         </nav>
     </header>
     <!-- MAIN SECTION -->
@@ -185,7 +184,7 @@
     </main>
     <!-- FOOTER -->
     <footer>
-        <h5>ohmyfood</h5>
+        <h4>ohmyfood</h4>
         <div class="contacts">
             <a href="#">
                 <i class="fas fa-utensils"></i>
