--- a/the_full_palette.html
+++ b/the_full_palette.html
@@ -32,8 +32,7 @@
                 </a>
                 <img src="/images/logo/ohmyfood@2x.svg" alt="logo picture">
             </div>
-            <img class="nav-img" src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.webp"
-                alt="restaurant picture">
+            <img class="nav-img" src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.webp" alt="restaurant picture">
         </nav>
     </header>
     <!-- MAIN SECTION -->
@@ -192,7 +191,7 @@
     </main>
     <!-- FOOTER -->
     <footer>
-        <h5>ohmyfood</h5>
+        <h4>ohmyfood</h4>
         <div class="contacts">
             <a href="#">
                 <i class="fas fa-utensils"></i>
