--- a/ohmyfood.html
+++ b/ohmyfood.html
@@ -24,7 +24,7 @@
 
 <body>
     <div class="loading">
-        <img src="./images/loading.gif" alt="spinner" width="250">
+        <img src="./images/loading.gif" alt="spinner">
     </div>
     <!-- HEADER  -->
     <div class="container">
@@ -32,14 +32,14 @@
 
             <!-- Section Navigation -->
             <nav>
-                <div class="navigation">
-                    <a href="ohmyfood.html" class="navigation-link">
-                        <img src="/images/logo/ohmyfood.png" alt="logo picture">
-                    </a>
-                    <div class="search-btn-wrap">
-                        <i class="fas fa-map-marker-alt"></i>
-                        <input type="search" name="search-box" id="search" placeholder="Paris, Belleville" />
-                    </div>
+                <!-- <div class="navigation"> -->
+                <a href="ohmyfood.html" class="navigation-link">
+                    <img src="/images/logo/ohmyfood.png" alt="logo_picture">
+                </a>
+                <div class="search-btn-wrap">
+                    <i class="fas fa-map-marker-alt"></i>
+                    <input type="search" name="search-box" id="search" placeholder="Paris, Belleville">
+                </div>
             </nav>
             <!-- End of Navigation -->
             <article class="head">
@@ -77,8 +77,7 @@
                 <h3>Restaurants</h3>
                 <div class="rst-ad">
                     <a target="_self" href="the_full_palette.html">
-                        <img src="/images/restaurants - main-page/jay-wennington-N_Y88TWmGwA-unsplash.webp"
-                            alt="restaurant picture">
+                        <img src="/images/restaurants-main-page/jay-wennington-N_Y88TWmGwA-unsplash.webp" alt="restaurant_picture">
                         <span>New</span>
                     </a>
                     <div class="ad-info">
@@ -89,15 +88,14 @@
                             </article>
                         </a>
                         <!-- <div class="main-heart"> -->
-                            <i class="far fa-heart main-heart1"></i>
-                            <i class="fas fa-heart main-heart2"></i>
+                        <i class="far fa-heart main-heart1"></i>
+                        <i class="fas fa-heart main-heart2"></i>
                         <!-- </div> -->
                     </div>
                 </div>
                 <div class="rst-ad">
                     <a target="_self" href="the_enchanted_plate.html">
-                        <img src="./images/restaurants - main-page/stil-u2Lp8tXIcjw-unsplash.webp"
-                            alt="restaurant picture">
+                        <img src="./images/restaurants-main-page/stil-u2Lp8tXIcjw-unsplash.webp" alt="restaurant_picture">
                         <span>New</span>
                     </a>
                     <div class="ad-info">
@@ -113,8 +111,7 @@
                 </div>
                 <div class="rst-ad">
                     <a target="_self" href="le_gourmand.html">
-                        <img src="images/restaurants - main-page/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.webp"
-                            alt="restaurant picture">
+                        <img src="images/restaurants-main-page/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.webp" alt="restaurant_picture">
                     </a>
                     <div class="ad-info">
                         <a href="le_gourmand.html">
@@ -129,8 +126,7 @@
                 </div>
                 <div class="rst-ad">
                     <a target="_self" href="bastille.html">
-                        <img src="images/restaurants - main-page/toa-heftiba-DQKerTsQwi0-unsplash.webp"
-                            alt="restaurant picture">
+                        <img src="images/restaurants-main-page/toa-heftiba-DQKerTsQwi0-unsplash.webp" alt="restaurant_picture">
                     </a>
                     <div class="ad-info">
                         <a href="bastille.html">
