--- a/ohmyfood.html
+++ b/ohmyfood.html
@@ -33,7 +33,7 @@
             <!-- Section Navigation -->
             <nav>
                 <!-- <div class="navigation"> -->
-                <a href="ohmyfood.html" class="navigation-link">
+                <a href="ohmyfood.html" class="navigation">
                     <img src="/images/logo/ohmyfood.png" alt="logo_picture">
                 </a>
                 <div class="search-btn-wrap">
